[build-system]
requires = ["setuptools>=42", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[tool.versioningit]
default-version = "2+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["v*"]

[tool.versioningit.write]
file = "src/run_brer/_version.py"
