[build-system]
requires = ["setuptools>=61", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "run_brer"
description = "A set of scripts for running BRER simulations using gmxapi."
authors = [
    { name = "Jennifer M. Hays, Kasson Lab BRER Team" },
    { name = "Kasson Lab BRER Team", email = "kassonlab@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL 2.1" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3"
]
dependencies = [
    'numpy>=1',
    'importlib-resources; python_version<"3.10"',
]
dynamic = ["version"]

[project.urls]
"Source" = "https://github.com/kassonlab/run_brer/"
"Documentation" = "https://kassonlab.github.io/run_brer/"

[project.optional-dependencies]
all = [
    "brer",
    "gmxapi"
]
test = [
  "pytest >= 6.1.2"
]

# Let setuptools discover the package in the current directory,
# but be explicit about non-Python files.
[tool.setuptools]
zip-safe = false
include-package-data = false
[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
run_brer = [
    "py.typed",
    "data/pair_data.json",
    "data/topol.tpr"
]

[tool.versioningit]
default-version = "2+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["v*"]

[tool.versioningit.write]
file = "src/run_brer/_version.py"
