[build-system]
# NOTE: We want to use the gmxapi from the host environment, not the isolated build environment.
# Check with different build frontends for access to system site-packages.
# * pip install
# * python -m build
# * python -m wheel
# There may be some extra documentation burden for people who _need_ older
# gmxapi versions. We may have to override the `requires` metadata in terms of
# the dependency version used by the binary as it is built.
requires = [
    "cmake>=3.15",
    "gmxapi",
    "pybind11>=2.6",
    "setuptools>=61",
    "versioningit~=2.0",
    "wheel"
]
build-backend = "backend"
backend-path = ["_custom_build"]

[project]
name = "brer-md"
description = "A set of scripts for running BRER simulations using gmxapi."
authors = [
    { name = "Jennifer M. Hays, Kasson Lab BRER Team" },
    { name = "Kasson Lab BRER Team", email = "kassonlab@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "LGPL 2.1" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3"
]
dependencies = [
    'gmxapi',
    'numpy>=1',
    'importlib-resources; python_version<"3.10"',
]
dynamic = ["version"]

[project.urls]
"Source" = "https://github.com/kassonlab/brer-md/"
"Documentation" = "https://kassonlab.github.io/brer-md/"

[project.optional-dependencies]
test = [
  "pytest >= 6.1.2"
]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.package-dir]
brer = "src/brer"

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
brer = [
    "py.typed",
    "data/pair_data.json",
    "data/topol.tpr"
]

[tool.versioningit]
default-version = "2+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["v*"]

[tool.versioningit.write]
file = "src/brer/_version.py"
