# Helper file to handle all configs

[metadata]
name = run_brer
version = attr: run_brer.__version__
description = A set of scripts for running BRER simulations using gmxapi.
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL 2.1
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/kassonlab/run_brer/
    Documentation = https://kassonlab.github.io/run_brer/
python_requires = ">=3.6"
author = Jennifer M. Hays, Kasson Lab BRER Team
author_email = "Kasson Lab BRER Team" <kassonlab@gmail.com>

[options]
package_dir=
    =src
packages=find:
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip_safe = False
install_requires =
    numpy>=1
tests_require =
    numpy>=1
    pytest>=6.1.2
    importlib-resources; python_version<"3.10"

[options.package_data]
run_brer = py.typed, data/pair_data.json, data/topol.tpr

[options.packages.find]
where=src

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    tests/*
    # Omit generated versioneer
    */run_brer/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119
